traefik/auth-admin-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth-admin

spec:
  headers:
    customRequestHeaders:
      X-Forward-Auth-Type: admin
