traefik/auth-all-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth-all

spec:
  forwardAuth:
    address: http://auth-all.traefik.svc.cluster.local/
    authResponseHeaders:
      - X-Forwarded-User
