traefik/daemon-set.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik

spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: traefik
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: traefik
    spec:
      enableServiceLinks: false
      serviceAccountName: traefik
      volumes:
        - name: config
          configMap:
            name: config
      containers:
        - name: traefik
          image: traefik:v3.2.4
          volumeMounts:
            - mountPath: /traefik-core-config
              name: config
          args:
            # must not specify other flags when --configFile is set
            - --configFile=/traefik-core-config/traefik.yaml
          ports:
            - name: web
              protocol: TCP
              containerPort: 80
            - name: web-secure
              protocol: TCP
              containerPort: 443
            - name: web-secure-udp
              protocol: UDP
              containerPort: 443
            - name: dashboard
              protocol: TCP
              containerPort: 8080
            - name: metrics
              protocol: TCP
              containerPort: 9100
          readinessProbe:
            httpGet:
              port: dashboard
              path: /ping
            periodSeconds: 1
            failureThreshold: 60
          startupProbe:
            httpGet:
              port: dashboard
              path: /ping
            periodSeconds: 1
            failureThreshold: 60
          livenessProbe:
            httpGet:
              port: dashboard
              path: /ping
            periodSeconds: 10
