traefik/traefik-daemon-set.yaml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik

spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: traefik
      containers:
        - name: traefik
          image: traefik:2.9
          args:
            - --api.insecure
            - --providers.kubernetescrd
            - --providers.kubernetesingress
            - --providers.file
            - --providers.file.directory=/opt/traefik/conf
            - --providers.file.watch=true
            - --entrypoints.web.address=:80/tcp
            - --entrypoints.websecure.address=:443/tcp
            - --entrypoints.websecure.http.tls=true
            - --entrypoints.traefik.address=:8080/tcp
            - --entrypoints.metrics.address=:9100/tcp
            - --api.dashboard=true
            - --ping=true
            - --metrics.prometheus=true
            - --metrics.prometheus.entrypoint=metrics
          ports:
            - name: web
              containerPort: 80
            - name: web-secure
              containerPort: 443
            - name: dashboard
              containerPort: 8080
            - name: metrics
              containerPort: 9100
          volumeMounts:
            - mountPath: /opt/traefik/conf
              name: traefik-config
      volumes:
        - name: traefik-config
          configMap:
            name: traefik-config
