traefik/auth-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-admin

spec:
  type: ClusterIP
  selector:
    app: auth-admin
  ports:
    - port: 80
      targetPort: http
      name: http
