traefik/auth-all-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-all

spec:
  type: ClusterIP
  selector:
    app: auth-all
  ports:
    - port: 80
      targetPort: http
      name: http
