traefik/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  annotations:
    prometheus.io/scrape: "true"

spec:
  type: ClusterIP
  ports:
    - targetPort: metrics
      name: metrics
      port: 80
  selector:
    app: traefik
