traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik

spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  externalIPs:
    - 0.0.0.0
  ports:
    - targetPort: web
      name: web
      port: 80
    - targetPort: web-secure
      name: web-secure
      port: 443
    - targetPort: gitea-ssh
      name: gitea-ssh
      port: 2200
    - targetPort: ns-ssh
      name: ns-ssh
      port: 2201
  selector:
    app: traefik
