traefik/auth-admin-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: auth-admin

spec:
  entryPoints:
    - websecure
  tls:
    secretName: auth-admin-tls
  routes:
    - kind: Rule
      match: Host(`auth-admin.toki317.dev`)
      services:
        - namespace: traefik
          kind: Service
          name: auth-admin
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
