traefik/auth-all-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: auth-all

spec:
  entryPoints:
    - websecure
  tls:
    secretName: auth-all-tls
  routes:
    - kind: Rule
      match: Host(`auth.toki317.dev`)
      services:
        - namespace: traefik
          kind: Service
          name: auth-all
          port: http
          scheme: http
          strategy: RoundRobin
          weight: 1
